fixed toolbar issue on Toolbar with ImageView parallax

--- a/app/src/main/res/layout/activity_coord_layout_app_bar_img.xml
+++ b/app/src/main/res/layout/activity_coord_layout_app_bar_img.xml
@@ -21,8 +21,7 @@
             app:expandedTitleMarginBottom="32dp"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:theme="@style/ToolbarCustomIconColor">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/header"
@@ -40,7 +39,7 @@
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme"
-                app:theme="@style/ToolbarCustomIconColor" />
+                app:theme="@style/ThemeOverlay.AppCompat.Dark" />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
